Reordered Recipe 1 through 3

--- a/3_django_templates/coffeehouse/templates/base.html
+++ b/3_django_templates/coffeehouse/templates/base.html
@@ -47,7 +47,7 @@
 
     <div class="container">
 
-   {% if not params.homepage %}
+   {% if not homepage %}
     <ul class="breadcrumb">
       {% block breadcrumb %}     
       {% endblock %}
