Updated app for Ch 2 recipes to Django 1.7

--- a/2_move_values_in_django/coffeehouse/templates/stores/index.html
+++ b/2_move_values_in_django/coffeehouse/templates/stores/index.html
@@ -13,7 +13,6 @@
 <ul>
  <li><code>user</code>:{{user}}</li>
  <li><code>perms.coffeehouse.about</code>: {{perms.coffeehouse.about}}</li>
- <li><code>perms.sites</code>:{{perms.sites}}</li>
 </ul>
 <p>debug context processor variables</p>
 <ul>
@@ -48,4 +47,17 @@
 <p>message context processor variable</p>
 <ul>
 <li><code>messages</code>:{{messages}}</li>
+<li><code>DEFAULT_MESSAGE_LEVELS</code>:{{DEFAULT_MESSAGE_LEVELS}}</li>
+
+</ul>
+
+
+<p>request context processor variable</p>
+<ul>
+<li><code>request</code>:{{request}}</li>
+</ul>
+
+<p>CSRF context processor variable</p>
+<ul>
+<li><code>csrf_token</code>:{{csrf_token}}</li>
 </ul>
