--- a/2_move_values_in_django/coffeehouse/templates/homepage.html
+++ b/2_move_values_in_django/coffeehouse/templates/homepage.html
@@ -5,6 +5,8 @@
  <li> Drink link: <a href="/drinks/espresso/">/drinks/espresso/</a></li>
  <li> Store link: <a href="/stores/">/stores/</a></li>
  <li> Store link: <a href="/stores/1/">/stores/1/</a></li>
+ <li> About link: <a href="/about/">/about/</a></li>
+ <li> Contact link: <a href="/about/contact">/about/contact/</a></li>
 </ul>
 
 <h4>Django HTTP handling</h4> 
