--- a/3_django_templates/coffeehouse/templates/stores/index.html
+++ b/3_django_templates/coffeehouse/templates/stores/index.html
@@ -3,7 +3,7 @@
 
 {% block breadcrumb %} 
         <li><a href="/">Home</a></li>         
-	{% if store_name %}
+	{% if store.name %}
             <li><a href="/stores/">Stores</a></li>         
         {% else %} 
             <li class="active">Stores</li>
