--- a/3_django_templates/coffeehouse/templates/about/index.html
+++ b/3_django_templates/coffeehouse/templates/about/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} 
-{% block title %} Coffeehouse about page {% endblock %} 
+{% block title %} Coffeehouse About {{store.name}} store {% endblock %} 
 
 
 {% block breadcrumb %} 
@@ -9,6 +9,9 @@
 
 {% block content %}
 
-<h4>About page</h4>
+<h4>{{store.name}} store</h4>
+
+<p>{{store.address}}</p>
+<p>{{store.city}},{{store.state}}</p>
 
 {% endblock %}
