Updated code for Ch 3 with named links and updated URLs

--- a/3_django_templates/coffeehouse/templates/about/index.html
+++ b/3_django_templates/coffeehouse/templates/about/index.html
@@ -3,7 +3,7 @@
 
 
 {% block breadcrumb %} 
-        <li><a href="/">Home</a></li>         
+        <li><a href="{% url 'homepage' %}">Home</a></li>         
         <li class="active">About</li>
 {% endblock %} 
 
