--- a/3_django_templates/coffeehouse/templates/about/contact.html
+++ b/3_django_templates/coffeehouse/templates/about/contact.html
@@ -2,7 +2,7 @@
 {% block title %} Coffeehouse Contact {{store.name}} store {% endblock %} 
 
 {% block breadcrumb %} 
-        <li><a href="/">Home</a></li>         
+        <li><a href="{% url 'homepage' %}">Home</a></li>         
         <li class="active">Contact</li>
 {% endblock %} 
 
