--- a/3_django_templates/coffeehouse/templates/base.html
+++ b/3_django_templates/coffeehouse/templates/base.html
@@ -36,9 +36,9 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a href="/">Home</a></li>
-          <li><a href="/about/">About</a></li>
-          <li><a href="/about/contact">Contact</a></li>
+          <li><a href="{% url 'homepage' %}">Home</a></li>
+          <li><a href="{% url 'about:index' %}">About</a></li>
+          <li><a href="{% url 'about:contact' %}">Contact</a></li>
         </ul>
       </div><!--/.navbar-collapse -->
     </div>
