--- a/3_django_templates/coffeehouse/templates/drinks/index.html
+++ b/3_django_templates/coffeehouse/templates/drinks/index.html
@@ -2,9 +2,9 @@
 {% block title %} Coffeehouse Drinks page {% endblock %} 
 
 {% block breadcrumb %} 
-        <li><a href="/">Home</a> </li>         
+        <li><a href="{% url 'homepage' %}">Home</a> </li>         
 	{% if drink %}
-            <li><a href="/drinks/">Drinks</a></li>         
+            <li><a href="{% url 'drinks:index' %}">Drinks</a></li>         
         {% else %} 
             <li class="active">Drinks</li>
 	{% endif %}
@@ -14,7 +14,7 @@
 
   <ul> 
 {% for drink in drinks %}
-    <li><a href="/drinks/{{drink}}">{{drink|title}}</a></li>    
+    <li><a href="{% url 'drinks:detail' drink %}">{{drink|title}}</a></li>    
 {% endfor %}
   </ul>
 
