--- a/3_django_templates/coffeehouse/templates/online/index.html
+++ b/3_django_templates/coffeehouse/templates/online/index.html
@@ -2,7 +2,7 @@
 {% block title %} Coffeehouse order online {% endblock %} 
 
 {% block breadcrumb %} 
-        <li><a href="/">Home</a></li>         
+        <li><a href="{% url 'homepage' %}">Home</a></li>         
         <li class="active">Order online</li>
 {% endblock %} 
 
