--- a/3_django_templates/coffeehouse/templates/stores/index.html
+++ b/3_django_templates/coffeehouse/templates/stores/index.html
@@ -2,9 +2,9 @@
 {% block title %} Coffeehouse Stores page {% endblock %} 
 
 {% block breadcrumb %} 
-        <li><a href="/">Home</a></li>         
+        <li><a href="{% url 'homepage' %}">Home</a></li>         
 	{% if store.name %}
-            <li><a href="/stores/">Stores</a></li>         
+            <li><a href="{% url 'stores:index' %}">Stores</a></li>         
         {% else %} 
             <li class="active">Stores</li>
         {% endif %} 
@@ -14,7 +14,7 @@
 
   <ul> 
 {% for store in stores %}
-    <li><a href="/stores/{{store.id}}">{{store.name}}</a></li>    
+    <li><a href="{% url 'stores:detail' store.id %}">{{store.name}}</a></li>    
 {% endfor %}
   </ul>
 
