--- a/5_django_settings/coffeehouse/templates/base.html
+++ b/5_django_settings/coffeehouse/templates/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,14 +10,12 @@
     <meta name="author" content="">
 
     <!-- styles -->
-    <link href="{{STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="{% static 'bootstrap/css/bootstrap.css'%}" rel="stylesheet">
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
-    <!-- <link href="{{STATIC_URL}}css/bootstrap-responsive.css" rel="stylesheet">-->
-
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -64,7 +63,7 @@
     <!-- Javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{STATIC_URL}}jquery/jquery-1.11.1.js"></script>
-    <script src="{{STATIC_URL}}bootstrap/js/bootstrap.js"></script>
+    <script src="{% static 'jquery/jquery-1.11.1.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
   </body>
 </html>
