--- a/6_django_forms/coffeehouse/templates/base.html
+++ b/6_django_forms/coffeehouse/templates/base.html
@@ -64,5 +64,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script   src="http://code.jquery.com/jquery-1.12.2.min.js"   integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    {% block beforebodyend %}{% endblock %}
   </body>
 </html>
