--- a/6_django_forms/coffeehouse/templates/homepage.html
+++ b/6_django_forms/coffeehouse/templates/homepage.html
@@ -16,17 +16,21 @@
 
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h2>Stores</h2>
           <p><a class="btn btn-default" href="{% url 'stores:index' %}">View store details &raquo;</a></p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h2>Drinks</h2>
           <p><a class="btn btn-default" href="{% url 'drinks:index' %}">View drink details &raquo;</a></p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h2>Order online</h2>
-          <p><a class="btn btn-default" href="{% url 'online' %}">Order online &raquo;</a></p>
+          <p><a class="btn btn-default" href="{% url 'online:index' %}">Order online &raquo;</a></p>
+        </div>
+	<div class="col-md-3">
+          <h2>Social</h2>
+          <p><a class="btn btn-default" href="{% url 'social:index' %}">Share your media &raquo;</a></p>
         </div>
       </div>
 {% endblock %}
