--- a/6_django_forms/coffeehouse/templates/stores/detail.html
+++ b/6_django_forms/coffeehouse/templates/stores/detail.html
@@ -16,5 +16,44 @@
 <p>We offer: {{store_amenities.0}} and {{store_amenities.1}}</p> 
 <p>Menu includes : {{store_menu.1.1}} and {{store_menu.2.1}}</p> 
 
+<h4>Feedback</h4>
+<div class="row">
+  <div id="feedbackmessage"</div>
+</div>
+<form method="POST" id="feedbackform" action="{% url 'stores:feedback' %}">
+  {% csrf_token %}
+    <div class="row">
+      <div class="col-md-12 pull-left">
+	 {{ form.comment }}
+       </div>
+    </div>
+<input type="submit" value="Submit feedback" class="btn btn-primary">
+</form>  
+{% endblock %}
+{% block beforebodyend %}
+<script>
+$(document).ready(function() {
+    $("#feedbackform").submit(function(event) {
+       event.preventDefault();
+       $.ajax({ data: $(this).serialize(), 
+                type: $(this).attr('method'), 
+                url: $(this).attr('action'), 
+                success: function(response) {
+                     console.log(response);
+                     if(response['success']) {
+                         $("#feedbackmessage").html("<div class='alert alert-success'>Succesfully sent feedback, thank you!</div>");
+                         $("#feedbackform").addClass("hidden");
+                     } 
+                     if(response['error']) {
+                         $("#feedbackmessage").html("<div class='alert alert-danger'>" + response['error']['comment'] +"</div>");
+                     } 
+                },
+                error: function (request, status, error) {
+                     console.log(request.responseText);
+                }
+       });
+   });
+})
 
+</script>
 {% endblock %}
