--- a/4_django_jinja_templates/coffeehouse/templates/base.html
+++ b/4_django_jinja_templates/coffeehouse/templates/base.html
@@ -43,6 +43,14 @@
           <li><a href="{% url 'homepage' %}">Home</a></li>
           <li><a href="{% url 'about:index' %}">About</a></li>
           <li><a href="{% url 'about:contact' %}">Contact</a></li>
+	  <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Site sections<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="{% url 'stores:index' %}">Stores</a></li>
+	      <li><a href="{% url 'drinks:index' %}">Drinks</a></li>
+	      <li><a href="{% url 'online' %}">Order online</a></li>
+            </ul>
+	  </li>	  
         </ul>
       </div><!--/.navbar-collapse -->
     </div>
