--- a/7_django_models/coffeehouse/templates/base.html
+++ b/7_django_models/coffeehouse/templates/base.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,7 +9,7 @@
     <meta name="author" content="">
 
     <!-- styles -->
-    <link href="{% static 'bootstrap/css/bootstrap.css'%}" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -42,7 +41,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Site sections<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="{% url 'stores:index' %}">Stores</a></li>
-	      <li><a href="{% url 'drinks:index' %}">Drinks</a></li>
+	      <li><a href="{% url 'items:index' %}">Items</a></li>
 	      <li><a href="{% url 'online' %}">Order online</a></li>
             </ul>
 	  </li>	  
@@ -71,7 +70,8 @@
     <!-- Javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{% static 'jquery/jquery-1.11.1.js' %}"></script>
-    <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
+    <script   src="http://code.jquery.com/jquery-1.12.2.min.js"   integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk="   crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    {% block beforebodyend %}{% endblock %}
   </body>
 </html>
