Added Ch8 projects with class-based view and forms with models

--- a/8_django_model_constructs/coffeehouse/templates/base.html
+++ b/8_django_model_constructs/coffeehouse/templates/base.html
@@ -41,9 +41,9 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Site sections<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="{% url 'stores:index' %}">Stores</a></li>
-	      <li><a href="{% url 'drinks:index' %}">Drinks</a></li>
+	      <li><a href="{% url 'items:index' %}">Items</a></li>
 	      <li><a href="{% url 'online:index' %}">Order online</a></li>
-	      <li><a href="{% url 'social:index' %}">Share your media</a></li>
+	      <li><a href="{% url 'social:index' %}">Share your media</a></li>	      
             </ul>
 	  </li>	  
         </ul>
