--- a/2_django_views_urls_middleware/coffeehouse/templates/banners/index.html
+++ b/2_django_views_urls_middleware/coffeehouse/templates/banners/index.html
@@ -1,3 +1,3 @@
 <h4>Banner Placeholder</h4>
 
- <li> Current link is : <a href="{% url 'banners_adverts:index' %}">{% url 'banners_adverts:index' %}</a></li>
+ <li> Current link for {{ request.resolver_match.app_name }} is : <a href="{% url 'coffeehouse.banners:index' %}">{% url 'coffeehouse.banners:index' %}</a></li>
