--- a/2_django_views_urls_middleware/coffeehouse/templates/stores/detail.html
+++ b/2_django_views_urls_middleware/coffeehouse/templates/stores/detail.html
@@ -1,6 +1,6 @@
 <h4> {{store.name}} store</h4>
 <p>We offer: {{store_amenities.0}} and {{store_amenities.1}}</p>
-<p>Menu includes : {{store_menu.1.1}} and {{store_menu.2.1}}</p>
+<p>Menu includes : {{store_menu.1.1}} and {{store_menu.2.1}} (<a href="{% url 'coffeehouse.stores:menu' store.id %}">Download menu is CSV)</a>)</p>
 <p><a href="{% url 'coffeehouse.stores:nested-stores-about:index' store.id %}">More about this store</a></p>
 <p><a href="{% url 'coffeehouse.stores:nested-stores-about:contact' store.id %}">Contact this store</a></p>
 <hr/>  
