Updated Ch3 to Django 3.2

--- a/3_django_templates/coffeehouse/templates/homepage.html
+++ b/3_django_templates/coffeehouse/templates/homepage.html
@@ -8,7 +8,7 @@
   <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Welcome to the Coffeehouse!</h1>
-        <p><a class="btn btn-primary btn-lg" href="{% url 'about:index'%}">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="{% url 'coffeehouse.about:index'%}">Learn more &raquo;</a></p>
 	{% with myvar="Open since 1965!" %} 	
 	{{myvar|customcoffee:"lead muted"}}
         {% endwith%}
@@ -18,11 +18,11 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Stores</h2>
-          <p><a class="btn btn-default" href="{% url 'stores:index' %}">View store details &raquo;</a></p>
+          <p><a class="btn btn-default" href="{% url 'coffeehouse.stores:index' %}">View store details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Drinks</h2>
-          <p><a class="btn btn-default" href="{% url 'drinks:index' %}">View drink details &raquo;</a></p>
+          <p><a class="btn btn-default" href="{% url 'coffeehouse.drinks:index' %}">View drink details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Order online</h2>
