--- a/3_django_templates/coffeehouse/templates/base.html
+++ b/3_django_templates/coffeehouse/templates/base.html
@@ -35,13 +35,13 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li><a href="{% url 'homepage' %}">Home</a></li>
-          <li><a href="{% url 'about:index' %}">About</a></li>
-          <li><a href="{% url 'about:contact' %}">Contact</a></li>
+          <li><a href="{% url 'coffeehouse.about:index' %}">About</a></li>
+          <li><a href="{% url 'coffeehouse.about:contact' %}">Contact</a></li>
 	  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Site sections<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="{% url 'stores:index' %}">Stores</a></li>
-	      <li><a href="{% url 'drinks:index' %}">Drinks</a></li>
+              <li><a href="{% url 'coffeehouse.stores:index' %}">Stores</a></li>
+	      <li><a href="{% url 'coffeehouse.drinks:index' %}">Drinks</a></li>
 	      <li><a href="{% url 'online' %}">Order online</a></li>
             </ul>
 	  </li>
