--- a/4_django_jinja_templates/coffeehouse/templates/base.html
+++ b/4_django_jinja_templates/coffeehouse/templates/base.html
@@ -3,7 +3,7 @@
     <h4>{{name}}</h4>
     <p>{{address}} {{city}},{{state}}</p>
     {% if email %}<p><a href='mailto:{{email}}'>{{email}}</a></p>{% endif %}
-{%- endmacro %}
+    {%- endmacro %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -41,16 +41,16 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li><a href="{% url 'homepage' %}">Home</a></li>
-          <li><a href="{% url 'about:index' %}">About</a></li>
-          <li><a href="{% url 'about:contact' %}">Contact</a></li>
+          <li><a href="{% url 'coffeehouse.about:index' %}">About</a></li>
+          <li><a href="{% url 'coffeehouse.about:contact' %}">Contact</a></li>
 	  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Site sections<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="{% url 'stores:index' %}">Stores</a></li>
-	      <li><a href="{% url 'drinks:index' %}">Drinks</a></li>
+              <li><a href="{% url 'coffeehouse.stores:index' %}">Stores</a></li>
+	      <li><a href="{% url 'coffeehouse.drinks:index' %}">Drinks</a></li>
 	      <li><a href="{% url 'online' %}">Order online</a></li>
             </ul>
-	  </li>	  
+	  </li>
         </ul>
       </div><!--/.navbar-collapse -->
     </div>
