--- a/4_django_jinja_templates/coffeehouse/templates/drinks/index.html
+++ b/4_django_jinja_templates/coffeehouse/templates/drinks/index.html
@@ -4,7 +4,7 @@
 {% block breadcrumb %} 
         <li><a href="{% url 'homepage' %}">Home</a> </li>         
 	{% if drink %}
-            <li><a href="{% url 'drinks:index' %}">Drinks</a></li>         
+            <li><a href="{% url 'coffeehouse.drinks:index' %}">Drinks</a></li>         
         {% else %} 
             <li class="active">Drinks</li>
 	{% endif %}
@@ -14,7 +14,7 @@
 
   <ul> 
 {% for drink in drinks %}
-    <li><a href="{% url 'drinks:detail' drink %}">{{drink|title}}</a></li>    
+    <li><a href="{% url 'coffeehouse.drinks:detail' drink %}">{{drink|title}}</a></li>    
 {% endfor %}
   </ul>
 
