--- a/4_django_jinja_templates/coffeehouse/templates/homepage.html
+++ b/4_django_jinja_templates/coffeehouse/templates/homepage.html
@@ -7,20 +7,21 @@
   <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Welcome to the Coffeehouse!</h1>
-        <p><a class="btn btn-primary btn-lg" href="{% url 'about:index'%}">Learn more &raquo;</a></p>
-	{% set myvar="Open since 1965!" %} 	
+        <p><a class="btn btn-primary btn-lg" href="{% url 'coffeehouse.about:index'%}">Learn more &raquo;</a></p>
+	{% with myvar="Open since 1965!" %} 	
 	{{myvar|customcoffee("lead muted")}}
+        {% endwith%}
       </div>
 
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
           <h2>Stores</h2>
-          <p><a class="btn btn-default" href="{% url 'stores:index' %}">View store details &raquo;</a></p>
+          <p><a class="btn btn-default" href="{% url 'coffeehouse.stores:index' %}">View store details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Drinks</h2>
-          <p><a class="btn btn-default" href="{% url 'drinks:index' %}">View drink details &raquo;</a></p>
+          <p><a class="btn btn-default" href="{% url 'coffeehouse.drinks:index' %}">View drink details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Order online</h2>
