Updated to Django 4 (& Bootstrap 5)

--- a/3_django_templates/coffeehouse/templates/about/contact.html
+++ b/3_django_templates/coffeehouse/templates/about/contact.html
@@ -2,8 +2,8 @@
 {% block title %} Coffeehouse Contact {{store.name}} store {% endblock %} 
 
 {% block breadcrumb %} 
-        <li><a href="{% url 'homepage' %}">Home</a></li>         
-        <li class="active">Contact</li>
+        <li class="breadcrumb-item"><a href="{% url 'homepage' %}">Home</a></li>         
+        <li class="breadcrumb-item active" aria-current="page">Contact</li>
 {% endblock %} 
 
 {% block content %}
