--- a/3_django_templates/coffeehouse/templates/stores/detail.html
+++ b/3_django_templates/coffeehouse/templates/stores/detail.html
@@ -3,7 +3,7 @@
 
 {% block breadcrumb %}
      {{ block.super }}
-    <li class="active">{{store.name}}</li>
+    <li class="breadcrumb-item active">{{store.name}}</li>
 {% endblock %}
 
 
