--- a/3_django_templates/coffeehouse/templates/base.html
+++ b/3_django_templates/coffeehouse/templates/base.html
@@ -7,55 +7,60 @@
     <meta name="description" content="{% block metadescription%}{% endblock %}">
     <meta name="keywords" content="{% block metakeywords%}{% endblock %}">
     <meta name="author" content="">
-
-    <!-- styles -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <style>
+      /* Adjust body to make main container go below the bottom of the navbar */
       body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+       min-height: 75rem;
+       padding-top: 4.5rem;
       }
     </style>
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <!-- styles -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-header">
-          <a class="navbar-brand" href="/">Coffeehouse</a>
-	  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-	    <span class="icon-bar"></span>
-	    <span class="icon-bar"></span>
-	    <span class="icon-bar"></span>
-	  </button>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="{% url 'homepage' %}">Home</a></li>
-          <li><a href="{% url 'coffeehouse.about:index' %}">About</a></li>
-          <li><a href="{% url 'coffeehouse.about:contact' %}">Contact</a></li>
-	  <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Site sections<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="{% url 'coffeehouse.stores:index' %}">Stores</a></li>
-	      <li><a href="{% url 'coffeehouse.drinks:index' %}">Drinks</a></li>
-	      <li><a href="{% url 'online' %}">Order online</a></li>
+    <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Coffeehouse</a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+           <span class="navbar-toggler-icon"></span>
+           <span class="navbar-toggler-icon"></span>   
+          </button>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+	    <a class="nav-link" href="{% url 'homepage' %}">Home</a>
+	  </li>
+          <li class="nav-item">
+	    <a class="nav-link" href="{% url 'coffeehouse.about:index' %}">About</a>
+	  </li>
+          <li class="nav-item">
+	    <a class="nav-link" href="{% url 'coffeehouse.about:contact' %}">Contact</a>
+	  </li>
+	  <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Site sections</a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="{% url 'coffeehouse.stores:index' %}">Stores</a></li>
+	      <li><a class="dropdown-item" href="{% url 'coffeehouse.drinks:index' %}">Drinks</a></li>
+              <li><hr class="dropdown-divider"></li>	      
+	      <li><a class="dropdown-item" href="{% url 'online' %}">Order online</a></li>
             </ul>
 	  </li>
-        </ul>
-      </div><!--/.navbar-collapse -->
-    </div>
-
+          </ul>
+        </div><!--/.navbar-collapse -->
+      </div><!-- container-fluid -->
+    </div><!-- navbar -->
     <div class="container">
 
    {% block nobreadcrumb %}
-    <ul class="breadcrumb">
+    <nav aria-label="breadcrumb">
+     <ol class="breadcrumb">
       {% block breadcrumb %}     
       {% endblock %}
-    </ul> 
+     </ol>
+    </nav>
    {% endblock %}
  
       {% block content %}
@@ -67,10 +72,8 @@
       </footer>
     </div> <!-- /container -->
 
-    <!-- Javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script   src="http://code.jquery.com/jquery-1.12.2.min.js"   integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk="   crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <!-- Javascript ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
 </html>
