--- a/3_django_templates/coffeehouse/templates/online/index.html
+++ b/3_django_templates/coffeehouse/templates/online/index.html
@@ -2,8 +2,8 @@
 {% block title %} Coffeehouse order online {% endblock %} 
 
 {% block breadcrumb %} 
-        <li><a href="{% url 'homepage' %}">Home</a></li>         
-        <li class="active">Order online</li>
+        <li class="breadcrumb-item"><a href="{% url 'homepage' %}">Home</a></li>         
+        <li class="breadcrumb-item active" aria-current="page">Order online</li>
 {% endblock %} 
 
 
