--- a/4_django_jinja_templates/coffeehouse/templates/drinks/detail.html
+++ b/4_django_jinja_templates/coffeehouse/templates/drinks/detail.html
@@ -3,7 +3,7 @@
 
 {% block breadcrumb %}
      {{ super() }}
-     <li class="active">{{drink|title}}</li>
+     <li class="breadcrumb-item active" aria-current="page">{{drink|title}}</li>
 {% endblock %}
 
 {% block content %}
