--- a/4_django_jinja_templates/coffeehouse/templates/stores/detail.html
+++ b/4_django_jinja_templates/coffeehouse/templates/stores/detail.html
@@ -3,7 +3,7 @@
 
 {% block breadcrumb %}
      {{ super() }}
-    <li class="active">{{store.name}}</li>
+    <li class="breadcrumb-item active" aria-current="page">{{store.name}}</li>
 {% endblock %}
 
 
