--- a/4_django_jinja_templates/coffeehouse/templates/stores/index.html
+++ b/4_django_jinja_templates/coffeehouse/templates/stores/index.html
@@ -2,11 +2,11 @@
 {% block title %} Coffeehouse Stores page {% endblock %} 
 
 {% block breadcrumb %} 
-        <li><a href="{% url 'homepage' %}">Home</a></li>         
+        <li class="breadcrumb-item"><a href="{{ url('homepage') }}">Home</a></li>         
 	{% if store %}
-            <li><a href="{% url 'coffeehouse.stores:index' %}">Stores</a></li>         
+            <li class="breadcrumb-item"><a href="{{ url('coffeehouse.stores:index') }}">Stores</a></li>         
         {% else %} 
-            <li class="active">Stores</li>
+            <li class="breadcrumb-item active" aria-current="page">Stores</li>
         {% endif %} 
 {% endblock %} 
 
@@ -14,7 +14,7 @@
 
   <ul> 
 {% for store in stores %}
-    <li><a href="{% url 'coffeehouse.stores:detail' store.id %}">{{store.name}}</a></li>    
+    <li><a href="{{ url('coffeehouse.stores:detail', args=[store.id]) }}">{{store.name}}</a></li>    
 {% endfor %}
   </ul>
 
